--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="usuario_telefono">Introduce tu teléfono</string>
     <string name="quieres_cambiar_la_contraseña">¿Quieres cambiar la contraseña?</string>
     <string name="modificacion_perfil">Modificación del perfil</string>
+    <string name="conseguido">CONSEGUIDO</string>
 </resources>
