--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,8 @@
     <string name="modificacion_perfil">Modificación del perfil</string>
     <string name="conseguido">CONSEGUIDO</string>
     <string name="boton_modperfil">boton_modPerfil</string>
+    <string name="foto_chef">foto chef</string>
+    <string name="nombre_del_chef">Nombre del chef</string>
+    <string name="tipo_de_comida">Tipo de comida</string>
+    <string name="provincia">Provincia</string>
 </resources>
