--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,8 @@
     <string name="nombre_del_chef">Nombre del chef</string>
     <string name="tipo_de_comida">Tipo de comida</string>
     <string name="provincia">Provincia</string>
+    <string name="selecciona_provincia">Selecciona una provincia</string>
+    <string name="selecciona_comida">Selecciona un tipo de comida</string>
+    <string name="selecciona_servicio">Selecciona un servicio</string>
+
 </resources>
