cambios activity_admin, busqueda, activity_user, user_ampliado, añado fastmethods del servidor, clase reserva y utils. Añado clases nuevas, reserva ampliado y adapter reserva

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,5 +55,8 @@
     <string name="boton_ajustes">Boton ajustes</string>
     <string name="telefono_chef">Teléfono chef</string>
     <string name="boton_logout">Boton logout</string>
+    <string name="fecha_reserva">fecha reserva</string>
+    <string name="comentario">Comentario</string>
+    <string name="introduce_tu_comentario">Introduce tu reseña</string>
 
 </resources>
