--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,21 +7,20 @@
     <string name="boton_confirmar">boton confirmar</string>
     <string name="logo">logo</string>
     <string name="usuario">Usuario</string>
-    <string name="contraseña">Contraseña</string>
-    <string name="has_olvidado_la_contraseña">¿Has olvidado la contraseña?</string>
+    <string name="contrasena">Contrasena</string>
+    <string name="has_olvidado_la_contrasena">¿Has olvidado la contrasena?</string>
     <string name="usuario_registro">Introduce el usuario</string>
-    <string name="contraseña_registro">Introduce la contraseña</string>
-    <string name="contraseña2_registro">Repite la contraseña</string>
-    <string name="contraseña_anterior">Introduce la contraseña anterior</string>
-    <string name="contraseña_nueva">Introduce la nueva contraseña </string>
-    <string name="contraseña2_nueva">Repite la nueva contraseña</string>
+    <string name="contrasena_registro">Introduce la contrasena</string>
+    <string name="contrasena2_registro">Repite la contrasena</string>
+    <string name="contrasena_anterior">Introduce la contrasena anterior</string>
+    <string name="contrasena_nueva">Introduce la nueva contrasena </string>
+    <string name="contrasena2_nueva">Repite la nueva contrasena</string>
     <string name="eres_chef">¿Eres Chef?</string>
     <string name="usuario_nombre">Modifica tu nombre</string>
     <string name="usuario_direccion">Modifica tu dirección</string>
     <string name="usuario_telefono">Modifica tu teléfono</string>
-    <string name="quieres_cambiar_la_contraseña">¿Quieres cambiar la contraseña?</string>
+    <string name="quieres_cambiar_la_contrasena">¿Quieres cambiar la contrasena?</string>
     <string name="modificacion_perfil">Modificación del perfil</string>
-    <string name="conseguido">CONSEGUIDO</string>
     <string name="boton_modperfil">boton_modPerfil</string>
     <string name="foto_chef">foto chef</string>
     <string name="nombre_del_chef">Nombre del chef</string>
